新增查询用户，查询用户积分接口
