# app/admin/models/data_hub_user.go
@@ -1,0 +1,154 @@
+package models
+
+import "time"
+
+type DataHubUser struct {
+	ID uint `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	//Identity         string    `gorm:"not null;type:varchar(20)" json:"identity"`
+	Email *string `gorm:"type:varchar(40);default:null;index" json:"email"`
+	Name  string  `gorm:"type:varchar(20);default:null" json:"name"`
+	//Avatar           *string   `gorm:"type:varchar(300);default:null" json:"avatar"`
+	Wallet *string `gorm:"type:varchar(100);default:null" json:"-"`
+	//Nonce            *string   `gorm:"type:varchar(10);default:null" json:"nonce"`
+	//InviteCode       string    `gorm:"type:varchar(10);default:null" json:"invite_code"`
+	Point uint `json:"point"`
+	//TwitterID   *string `gorm:"type:varchar(40);default:null" json:"twitter_id"`
+	TwitterName *string `gorm:"type:varchar(20);default:null" json:"twitter_name"`
+	//FollowersCount   uint      `gorm:"default:0" json:"followers_count"`
+	Level uint `gorm:"default:1" json:"level"` //1 Beginner 2 Senior 3 Master
+	//SucCount         uint      `gorm:"default:0" json:"suc_count"`
+	//DoneCount uint `gorm:"default:0" json:"done_count"`
+	//LoginIP          *string   `json:"login_ip"`
+	Location *string `json:"location"`
+	//SBTLevel         int       `gorm:"default:-1" json:"sbt_level"` //-1 none 1 Beginner 2 Senior 3 Master
+	//SBTTxHash *string `json:"sbt_tx_hash"`
+	//BuilderPoint     int       `json:"builder_point"`
+	TelegramID        *string   `gorm:"type:varchar(40);default:null" json:"-"`
+	TelegramName      *string   `gorm:"type:varchar(40);default:null" json:"telegram_name"`
+	TelegramFullName  *string   `gorm:"type:varchar(40);default:null" json:"-"`
+	SolanaAccount     *string   `json:"solana_account"`
+	NearAccount       *string   `json:"near_account"`
+	EvmAccount        *string   `json:"evm_account"`
+	Rank              int       `json:"rank"`
+	CompletedItems    int       `json:"completed_items"`
+	UploadTimes       int       `json:"upload_times"`
+	ContributionValue int       `json:"contribution_value"`
+	CreatedAt         time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*DataHubUser) TableName() string {
+	return "users"
+}
+
+type Train struct {
+	ID           uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	User         uint      `gorm:"index" json:"user"`
+	Dataset      uint      `gorm:"index" json:"dataset"`
+	Selected     int       `json:"selected"`
+	TrainJob     uint      `gorm:"index" json:"train_job"`
+	DatasetType  uint      `json:"dataset_type"`
+	Valid        bool      `gorm:"default:false" json:"valid"`
+	AudioContent *string   `gorm:"default:null" json:"audio_content"`
+	AudioSimilar int       `gorm:"default:0" json:"audio_similar"`
+	CreatedAt    time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*Train) TableName() string {
+	return "trains"
+}
+
+type TMAUser struct {
+	ID               uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	AppID            int       `gorm:"default:0" json:"app_id"`
+	TelegramID       string    `gorm:"index" json:"telegram_id"`
+	TelegramFullName string    `gorm:"type:varchar(40);default:null" json:"telegram_full_name"`
+	TMAPoint         int       `json:"tma_point"`
+	InviteCode       string    `gorm:"type:varchar(10);default:null;index" json:"invite_code"`
+	CreatedAt        time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*TMAUser) TableName() string {
+	return "tma_users"
+}
+
+type UserNearAddress struct {
+	ID          uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	User        uint      `json:"user"`
+	NearAddress *string   `gorm:"default:null" json:"near_address"`
+	CreatedAt   time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*UserNearAddress) TableName() string {
+	return "user_near_addresses"
+}
+
+type UserEthereumAddress struct {
+	ID              uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	User            uint      `json:"user"`
+	EthereumAddress *string   `gorm:"type:varchar(50);default:null" json:"ethereum_address"`
+	CreatedAt       time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*UserEthereumAddress) TableName() string {
+	return "user_ethereum_addresses"
+}
+
+type AITaskUploadRecord struct {
+	ID         uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	User       uint      `gorm:"index" json:"user"`
+	Task       uint      `json:"task"`
+	TaskRecord uint      `gorm:"index" json:"task_record"`
+	Type       int       `json:"type"` // 0 Image 1 Text 2 Video 3 Audio
+	Total      int       `json:"total"`
+	Success    int       `json:"success"`
+	Files      string    `json:"files"`
+	Issued     int       `gorm:"default:0" json:"issued"`
+	Completed  int       `gorm:"default:0" json:"completed"`
+	CreatedAt  time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*AITaskUploadRecord) TableName() string {
+	return "ai_task_upload_records"
+}
+
+type AITaskUploadedFile struct {
+	ID           uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	User         uint      `gorm:"index" json:"user"`
+	Task         uint      `gorm:"index:idx_task_hash" json:"task"`
+	TaskRecord   uint      `gorm:"index" json:"task_record"`
+	UploadRecord uint      `gorm:"index" json:"upload_record"`
+	Type         int       `json:"type"` // 0 Image 1 Text 2 Video 3 Audio
+	Link         string    `json:"link"`
+	Hash         string    `gorm:"index:idx_task_hash" json:"hash"`
+	FileName     string    `gorm:"index" json:"file_name"`
+	VPass        bool      `gorm:"default:false" json:"v_pass"` // validator verify passed
+	APass        bool      `gorm:"default:true" json:"a_pass"`  // admin verify passed
+	Status       int       `gorm:"default:0" json:"status"`     //最终状态 -1 Data not qualified for task 0 accepted 1 finished
+	VAye         int       `gorm:"default:0" json:"v_aye"`      //aye of validator
+	VNay         int       `gorm:"default:0" json:"v_nay"`      //nay of validator
+	CreatedAt    time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*AITaskUploadedFile) TableName() string {
+	return "ai_task_uploaded_files"
+}
+
+type TrainReward struct {
+	ID        uint      `gorm:"primaryKey;type:autoIncrement;autoIncrementIncrement:1" json:"id"`
+	User      uint      `gorm:"index" json:"user"`
+	TrainJob  int       `json:"train_job"` //0 train -1 bind wallet -2 invite -3 bind email -4 collection -5 bug feedback -6 invite rebate -7 DBReport -8 DBVerifiedX -9 DBZealyReward -10 DBGPTHunterReward
+	Dataset   uint      `json:"dataset"`
+	Point     uint      `json:"point"`
+	Type      uint      `gorm:"default:0" json:"type"` // 0 train 1 bind wallet 2 invite 3 bind email 4 collection 5 bug feedback 6 invite rebate 7 report 8 verifiedX 9 ZealyReward 10 GPTHunterReward
+	CreatedAt time.Time `gorm:"type:timestamptz;autoCreateTime:milli;default:null" json:"created_at"`
+}
+
+func (*TrainReward) TableName() string {
+	return "train_rewards"
+}
+
+type RewardItem struct {
+	User      uint      `json:"user"`
+	Point     uint      `json:"point"`
+	CreatedAt time.Time `json:"created_at"`
+}
